--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -3,5 +3,4 @@ flask==1.0.2
 
 # local regression_model package
 # update with your local path
-#-e "C:\Users\Dell\Desktop\cours-A61\cours-A61\packages\regression_model\regression_model"
--e "C:\Users\sergi\OneDrive\Desktop\AEC-IA\TP-A61\TP-1-GitHub\packages\regression_model\regression_model"
+-e "C:\Users\Dell\Desktop\cours-A61\cours-A61\packages\regression_model"
